# Compsoc-Website-cobalt

./: .gitignore  _cobalt.yml  about.css  about.liquid  about_full.liquid  app.css  flake.nix  fonts.css  footer.css  header.css  index.css  index.liquid  index.md  index_full.liquid  join.css  logo-text.css  logo.css  meson.build  meson.options  package.nix  setup  watch
_includes/: default.liquid  footer.liquid  header.liquid  join.liquid  logo-text.liquid  logo.liquid
_includes/SVG/: discord.liquid  external-link.liquid  github.liquid  icon-black.liquid  instagram.liquid  star-filled.liquid  star.liquid
_layouts/: app.liquid
css/: about.css  fonts.css  index.css  join.css  logo.css
